@@ -18,29 +18,26 @@ class Solution {
     public List<List<Integer>> combinationSum2(int[] candidates, int target) {
         Arrays.sort(candidates);
         List<List<Integer>> res = new ArrayList<>();
-        dfs(candidates, target, 0, new ArrayList<>(), res);
+        dfs(candidates, target, res, new ArrayList<>(), 0);
         return res;
     }
 
-    private void dfs(int[] candidates, int target, int index, List<Integer> cur, List<List<Integer>> res) {
-        if (target < 0) {
-            return;
-        }
-
+    private void dfs(int[] candidates, int target, List<List<Integer>> res, List<Integer> cur, int index) {
         if (target == 0) {
             res.add(new ArrayList<>(cur));
+            return;
+        } else if (target < 0) {
             return;
         }
 
         for (int i = index; i < candidates.length; i++) {
-            if (index < i && candidates[i] == candidates[i - 1]) {
-                // every recursive call in this level should not deduct same value -
-                // candidates[i]
+            // 不能用相同数字作为(当前state的)起点
+            if (i != index && candidates[i] == candidates[i - 1]) {
                 continue;
             }
             cur.add(candidates[i]);
-            dfs(candidates, target - candidates[i], i + 1, cur, res);
-            cur.remove(cur.size() - 1);
+            dfs(candidates, target - candidates[i], res, cur, i + 1);
+            cur.removeLast();
         }
     }
 }
